// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: JavascriptDocs CloseDocs renders 1`] = `
<Fragment>
  <JavascriptDocElement
    code={
      <CodeTags
        code="dg.test.close(<test-id>)"
        params={
          Array [
            "<test-id>",
          ]
        }
        type="secondary"
      />
    }
    description={
      <React.Fragment>
        Closes the given 
        test
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`Utilities: JavascriptDocs OpenDocs renders 1`] = `
<Fragment>
  <JavascriptDocElement
    code={
      <CodeTags
        code="dg.test.open(<test-id>)"
        params={
          Array [
            "<test-id>",
          ]
        }
        type="secondary"
      />
    }
    description={
      <React.Fragment>
        Opens the given 
        test
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`Utilities: JavascriptDocs renders init and close methods 1`] = `
<JavascriptDocs
  close={true}
  componentName="test"
>
  <ul
    className="item-list"
  >
    <JavascriptDocElement
      code={
        <CodeTags
          code="dg.test.init()"
          type="secondary"
        />
      }
      description={
        <React.Fragment>
          <Link
            to="/getting-started/javascript"
          >
            Initializes
          </Link>
           
          test
        </React.Fragment>
      }
    >
      <li>
        <div>
          <h3
            scope="row"
          >
            <CodeTags
              code="dg.test.init()"
              type="secondary"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                dg.test.init()
              </code>
            </CodeTags>
          </h3>
          <p
            className="javascript-doc-element-description"
          >
            <Link
              to="/getting-started/javascript"
            />
             
            test
          </p>
        </div>
      </li>
    </JavascriptDocElement>
    <CloseDocs
      componentName="test"
    >
      <JavascriptDocElement
        code={
          <CodeTags
            code="dg.test.close(<test-id>)"
            params={
              Array [
                "<test-id>",
              ]
            }
            type="secondary"
          />
        }
        description={
          <React.Fragment>
            Closes the given 
            test
          </React.Fragment>
        }
      >
        <li>
          <div>
            <h3
              scope="row"
            >
              <CodeTags
                code="dg.test.close(<test-id>)"
                params={
                  Array [
                    "<test-id>",
                  ]
                }
                type="secondary"
              >
                <code
                  className="code-tags code-tags-secondary"
                >
                  dg.test.close(&lt;test-id&gt;)
                </code>
              </CodeTags>
            </h3>
            <p
              className="javascript-doc-element-description"
            >
              Closes the given 
              test
            </p>
          </div>
        </li>
      </JavascriptDocElement>
    </CloseDocs>
  </ul>
</JavascriptDocs>
`;

exports[`Utilities: JavascriptDocs renders init and open methods 1`] = `
<JavascriptDocs
  componentName="test"
  open={true}
>
  <ul
    className="item-list"
  >
    <JavascriptDocElement
      code={
        <CodeTags
          code="dg.test.init()"
          type="secondary"
        />
      }
      description={
        <React.Fragment>
          <Link
            to="/getting-started/javascript"
          >
            Initializes
          </Link>
           
          test
        </React.Fragment>
      }
    >
      <li>
        <div>
          <h3
            scope="row"
          >
            <CodeTags
              code="dg.test.init()"
              type="secondary"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                dg.test.init()
              </code>
            </CodeTags>
          </h3>
          <p
            className="javascript-doc-element-description"
          >
            <Link
              to="/getting-started/javascript"
            />
             
            test
          </p>
        </div>
      </li>
    </JavascriptDocElement>
    <OpenDocs
      componentName="test"
    >
      <JavascriptDocElement
        code={
          <CodeTags
            code="dg.test.open(<test-id>)"
            params={
              Array [
                "<test-id>",
              ]
            }
            type="secondary"
          />
        }
        description={
          <React.Fragment>
            Opens the given 
            test
          </React.Fragment>
        }
      >
        <li>
          <div>
            <h3
              scope="row"
            >
              <CodeTags
                code="dg.test.open(<test-id>)"
                params={
                  Array [
                    "<test-id>",
                  ]
                }
                type="secondary"
              >
                <code
                  className="code-tags code-tags-secondary"
                >
                  dg.test.open(&lt;test-id&gt;)
                </code>
              </CodeTags>
            </h3>
            <p
              className="javascript-doc-element-description"
            >
              Opens the given 
              test
            </p>
          </div>
        </li>
      </JavascriptDocElement>
    </OpenDocs>
  </ul>
</JavascriptDocs>
`;

exports[`Utilities: JavascriptDocs renders init, open and close methods 1`] = `
<JavascriptDocs
  close={true}
  componentName="test"
  open={true}
>
  <ul
    className="item-list"
  >
    <JavascriptDocElement
      code={
        <CodeTags
          code="dg.test.init()"
          type="secondary"
        />
      }
      description={
        <React.Fragment>
          <Link
            to="/getting-started/javascript"
          >
            Initializes
          </Link>
           
          test
        </React.Fragment>
      }
    >
      <li>
        <div>
          <h3
            scope="row"
          >
            <CodeTags
              code="dg.test.init()"
              type="secondary"
            >
              <code
                className="code-tags code-tags-secondary"
              >
                dg.test.init()
              </code>
            </CodeTags>
          </h3>
          <p
            className="javascript-doc-element-description"
          >
            <Link
              to="/getting-started/javascript"
            />
             
            test
          </p>
        </div>
      </li>
    </JavascriptDocElement>
    <OpenDocs
      componentName="test"
    >
      <JavascriptDocElement
        code={
          <CodeTags
            code="dg.test.open(<test-id>)"
            params={
              Array [
                "<test-id>",
              ]
            }
            type="secondary"
          />
        }
        description={
          <React.Fragment>
            Opens the given 
            test
          </React.Fragment>
        }
      >
        <li>
          <div>
            <h3
              scope="row"
            >
              <CodeTags
                code="dg.test.open(<test-id>)"
                params={
                  Array [
                    "<test-id>",
                  ]
                }
                type="secondary"
              >
                <code
                  className="code-tags code-tags-secondary"
                >
                  dg.test.open(&lt;test-id&gt;)
                </code>
              </CodeTags>
            </h3>
            <p
              className="javascript-doc-element-description"
            >
              Opens the given 
              test
            </p>
          </div>
        </li>
      </JavascriptDocElement>
    </OpenDocs>
    <CloseDocs
      componentName="test"
    >
      <JavascriptDocElement
        code={
          <CodeTags
            code="dg.test.close(<test-id>)"
            params={
              Array [
                "<test-id>",
              ]
            }
            type="secondary"
          />
        }
        description={
          <React.Fragment>
            Closes the given 
            test
          </React.Fragment>
        }
      >
        <li>
          <div>
            <h3
              scope="row"
            >
              <CodeTags
                code="dg.test.close(<test-id>)"
                params={
                  Array [
                    "<test-id>",
                  ]
                }
                type="secondary"
              >
                <code
                  className="code-tags code-tags-secondary"
                >
                  dg.test.close(&lt;test-id&gt;)
                </code>
              </CodeTags>
            </h3>
            <p
              className="javascript-doc-element-description"
            >
              Closes the given 
              test
            </p>
          </div>
        </li>
      </JavascriptDocElement>
    </CloseDocs>
  </ul>
</JavascriptDocs>
`;

exports[`Utilities: JavascriptDocs renders only init method 1`] = `
<Fragment>
  <ul
    className="item-list"
  >
    <JavascriptDocElement
      code={
        <CodeTags
          code="dg.test.init()"
          type="secondary"
        />
      }
      description={
        <React.Fragment>
          <Link
            to="/getting-started/javascript"
          >
            Initializes
          </Link>
           
          test
        </React.Fragment>
      }
    />
  </ul>
</Fragment>
`;
